--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -2,7 +2,7 @@
 title = {{archive}: Multi-Format Archive and Compression Support},
   author = {Jim Hester and Gábor Csárdi},
   year = {2025},
-  note = {R package version 1.1.12},
+  note = {R package version 1.1.12.1},
   url = {https://CRAN.R-project.org/package=archive},
   doi = {10.32614/CRAN.package.archive},
 }
@@ -38,6 +38,14 @@ title = {{BiocVersion}: Set the appropriate version of Bioconductor packages},
   url = {https://bioconductor.org/packages/BiocVersion},
   doi = {10.18129/B9.bioc.BiocVersion},
 }
+@Manual{classyfireR,
+title = {{ClassyFire}: Automated Chemical Classification With A Comprehensive, Computable Taxonomy},
+  author = {Djoumbou Feunang Y and Eisner R and Knox C and Chepelev L and Hastings J and Owen G and Fahy E and Steinbeck C and Subramanian S and Bolton E and Greiner R and Wishart DS},
+  journal = {Journal of Cheminformatics},
+  volume = {8:61},
+  year = {2016},
+  url = {https://doi.org/10.1186/s13321-016-0174-y},
+}
 @Manual{docopt,
 title = {{docopt}: Command-Line Interface Specification Language},
   author = {Edwin {de Jonge}},
@@ -58,7 +66,7 @@ title = {{fs}: Cross-Platform File System Operations Based on `{libuv}'},
   title = {httr2: Perform HTTP Requests and Process the Responses},
   author = {Hadley Wickham},
   year = {2025},
-  note = {R package version 1.2.1},
+  note = {R package version 1.2.2},
   url = {https://CRAN.R-project.org/package=httr2},
   doi = {10.32614/CRAN.package.httr2},
 }
@@ -102,7 +110,7 @@ title = {{fs}: Cross-Platform File System Operations Based on `{libuv}'},
 title = {{knitr}: A General-Purpose Package for Dynamic Report Generation in {R}},
   author = {Yihui Xie},
   year = {2025},
-  note = {R package version 1.50},
+  note = {R package version 1.51},
   url = {https://yihui.org/knitr/},
 }
 
@@ -181,6 +189,14 @@ title = {{msentropy}: Spectral Entropy for Mass Spectrometry Data},
   url = {https://CRAN.R-project.org/package=msentropy},
   doi = {10.32614/CRAN.package.msentropy},
 }
+@Manual{progress,
+title = {{progress}: Terminal Progress Bars},
+  author = {Gábor Csárdi and Rich FitzJohn},
+  year = {2023},
+  note = {R package version 1.2.3},
+  url = {https://CRAN.R-project.org/package=progress},
+  doi = {10.32614/CRAN.package.progress},
+}
 @Manual{Rutils,
 title = {{R.utils}: Various Programming Utilities},
   author = {Henrik Bengtsson},
@@ -248,7 +264,7 @@ title = {{rmarkdown}: Dynamic Documents for R},
 title = {{shiny}: Web Application Framework for R},
   author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Garrick Aden-Buie and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
   year = {2025},
-  note = {R package version 1.12.0},
+  note = {R package version 1.12.1},
   url = {https://CRAN.R-project.org/package=shiny},
   doi = {10.32614/CRAN.package.shiny},
 }
@@ -374,7 +390,7 @@ title = {{withr}: Run Code `{With}' Temporarily Modified Global State},
 title = {{yaml}: Methods to Convert R Data to YAML and Back},
   author = {Jeremy Stephens and Kirill Simonov},
   year = {2025},
-  note = {R package version 2.3.11},
+  note = {R package version 2.3.12},
   url = {https://CRAN.R-project.org/package=yaml},
   doi = {10.32614/CRAN.package.yaml},
 }
